fix overflow

--- a/src/Components/LandingPage/LandingPage.css
+++ b/src/Components/LandingPage/LandingPage.css
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 
